--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-      "geoip": "0.2.x"
+      "geoip": "0.2.x",
+      "optimist": "0.3.x"
     }
 }
